Sentiment analysis notebook created

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(11981, 9)"
+       "(12503, 8)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,12 +37,13 @@
    "source": [
     "DATA_FILE = \"data.csv\"\n",
     "df = pd.read_csv(DATA_FILE)\n",
-    "df.shape"
+    "#df['created_utc']=(pd.to_datetime(df['created_utc'], unit='s'))\n",
+    "df.shape "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -72,71 +73,65 @@
        "      <th>score</th>\n",
        "      <th>author</th>\n",
        "      <th>num_comments</th>\n",
-       "      <th>created_utc</th>\n",
        "      <th>url</th>\n",
-       "      <th>permalink</th>\n",
+       "      <th>created_utc</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>zfpo3b</td>\n",
+       "      <td>ym9vw8</td>\n",
        "      <td>UA</td>\n",
-       "      <td>Russian BTR is destroyed near Svatovo</td>\n",
+       "      <td>NYT Kherson braces for battle as RF administra...</td>\n",
        "      <td>1</td>\n",
-       "      <td>Worldly-Product-87</td>\n",
+       "      <td>MardukSyria</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://v.redd.it/q70q965xwl4a1</td>\n",
-       "      <td>1670475882</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>https://www.nytimes.com/2022/11/03/world/europ...</td>\n",
+       "      <td>1667594654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>zfp8rl</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>Ukrainian soldiers fire Stingers at a helicop...</td>\n",
+       "      <td>ym9t1i</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>Russia’s Wagner Group commanders cut off convi...</td>\n",
        "      <td>1</td>\n",
-       "      <td>[deleted]</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1670474652</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Quitetheninja</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.msn.com/en-CA/news/world/russias-w...</td>\n",
+       "      <td>1667594459</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>zfp82x</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>2 Ukrainian ATGMs hit a Russian post andor ch...</td>\n",
+       "      <td>ym9qej</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>Convict recruits are tortured and executed in ...</td>\n",
        "      <td>1</td>\n",
-       "      <td>BlissfullyHigh3</td>\n",
+       "      <td>Quitetheninja</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://v.redd.it/vv7yc7e3tl4a1</td>\n",
-       "      <td>1670474596</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>https://inews.co.uk/news/world/russia-wagner-g...</td>\n",
+       "      <td>1667594289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>zfou8v</td>\n",
+       "      <td>ym9i5s</td>\n",
        "      <td>UA</td>\n",
-       "      <td>Seized RU BMP2 now fights for the Ukrainian side</td>\n",
+       "      <td>love me some himars</td>\n",
        "      <td>1</td>\n",
-       "      <td>Worldly-Product-87</td>\n",
+       "      <td>9ND79</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://v.redd.it/gza3ox9upl4a1</td>\n",
-       "      <td>1670473517</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>https://v.redd.it/ew9eb2bqkxx91</td>\n",
+       "      <td>1667593756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>zfoswj</td>\n",
+       "      <td>ym96n2</td>\n",
        "      <td>UA</td>\n",
-       "      <td>Shot down Russian Mi8Mi17 and multiple bodies ...</td>\n",
+       "      <td>3 Ukrainian jets Allegedly MiG29 flying Eastwa...</td>\n",
        "      <td>1</td>\n",
-       "      <td>Worldly-Product-87</td>\n",
+       "      <td>TheHunter920</td>\n",
        "      <td>0</td>\n",
-       "      <td>https://v.redd.it/0lw71jzkpl4a1</td>\n",
-       "      <td>1670473416</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>https://twitter.com/jacklosh/status/1588543987...</td>\n",
+       "      <td>1667593002</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -144,28 +139,28 @@
       ],
       "text/plain": [
        "       id pov                                              title  score  \\\n",
-       "0  zfpo3b  UA              Russian BTR is destroyed near Svatovo      1   \n",
-       "1  zfp8rl  UA   Ukrainian soldiers fire Stingers at a helicop...      1   \n",
-       "2  zfp82x  UA   2 Ukrainian ATGMs hit a Russian post andor ch...      1   \n",
-       "3  zfou8v  UA   Seized RU BMP2 now fights for the Ukrainian side      1   \n",
-       "4  zfoswj  UA  Shot down Russian Mi8Mi17 and multiple bodies ...      1   \n",
+       "0  ym9vw8  UA  NYT Kherson braces for battle as RF administra...      1   \n",
+       "1  ym9t1i  RU  Russia’s Wagner Group commanders cut off convi...      1   \n",
+       "2  ym9qej  RU  Convict recruits are tortured and executed in ...      1   \n",
+       "3  ym9i5s  UA                                love me some himars      1   \n",
+       "4  ym96n2  UA  3 Ukrainian jets Allegedly MiG29 flying Eastwa...      1   \n",
        "\n",
-       "               author  num_comments                      created_utc  \\\n",
-       "0  Worldly-Product-87             0  https://v.redd.it/q70q965xwl4a1   \n",
-       "1           [deleted]             0                              NaN   \n",
-       "2     BlissfullyHigh3             0  https://v.redd.it/vv7yc7e3tl4a1   \n",
-       "3  Worldly-Product-87             0  https://v.redd.it/gza3ox9upl4a1   \n",
-       "4  Worldly-Product-87             0  https://v.redd.it/0lw71jzkpl4a1   \n",
+       "          author  num_comments  \\\n",
+       "0    MardukSyria             0   \n",
+       "1  Quitetheninja             1   \n",
+       "2  Quitetheninja             0   \n",
+       "3          9ND79             0   \n",
+       "4   TheHunter920             0   \n",
        "\n",
-       "          url  permalink  \n",
-       "0  1670475882        NaN  \n",
-       "1  1670474652        NaN  \n",
-       "2  1670474596        NaN  \n",
-       "3  1670473517        NaN  \n",
-       "4  1670473416        NaN  "
+       "                                                 url  created_utc  \n",
+       "0  https://www.nytimes.com/2022/11/03/world/europ...   1667594654  \n",
+       "1  https://www.msn.com/en-CA/news/world/russias-w...   1667594459  \n",
+       "2  https://inews.co.uk/news/world/russia-wagner-g...   1667594289  \n",
+       "3                    https://v.redd.it/ew9eb2bqkxx91   1667593756  \n",
+       "4  https://twitter.com/jacklosh/status/1588543987...   1667593002  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,42 +171,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>pov</th>\n",
+       "      <th>title</th>\n",
+       "      <th>score</th>\n",
+       "      <th>author</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>url</th>\n",
+       "      <th>created_utc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12492</th>\n",
+       "      <td>tic2c5</td>\n",
+       "      <td>CIVILIAN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>YungChaky</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://i.redd.it/y5bnskrxigo81.jpg</td>\n",
+       "      <td>1647746558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12494</th>\n",
+       "      <td>tic08e</td>\n",
+       "      <td>KHARKIV,</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>YungChaky</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://v.redd.it/erha013aigo81</td>\n",
+       "      <td>1647746349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12502</th>\n",
+       "      <td>tiaqd1</td>\n",
+       "      <td>RUKRAINERUSSIAREPORT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[deleted]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/UkraineRussiaReport/c...</td>\n",
+       "      <td>1647741962</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id                   pov title  score     author  num_comments  \\\n",
+       "12492  tic2c5              CIVILIAN   NaN      3  YungChaky             0   \n",
+       "12494  tic08e              KHARKIV,   NaN      1  YungChaky             0   \n",
+       "12502  tiaqd1  RUKRAINERUSSIAREPORT   NaN      1  [deleted]             0   \n",
+       "\n",
+       "                                                     url  created_utc  \n",
+       "12492                https://i.redd.it/y5bnskrxigo81.jpg   1647746558  \n",
+       "12494                    https://v.redd.it/erha013aigo81   1647746349  \n",
+       "12502  https://www.reddit.com/r/UkraineRussiaReport/c...   1647741962  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df[\"title\"].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UA          6426\n",
-       "RU          5357\n",
-       "CIV          124\n",
-       "NO            33\n",
-       "UKR           10\n",
-       "RUPOV          9\n",
-       "UAPOV          5\n",
-       "BEST           4\n",
-       "REDDIT         2\n",
-       "UA.POV         1\n",
-       "ORDINARY       1\n",
-       "WHAT           1\n",
-       "UARUCIV        1\n",
-       "RUUA           1\n",
-       "THE            1\n",
-       "UA.POV.        1\n",
-       "MOD            1\n",
-       "RUS            1\n",
-       "UKRAINE        1\n",
-       "UAPOV.         1\n",
+       "UA                      6565\n",
+       "RU                      5568\n",
+       "CIV                      190\n",
+       "NO                        55\n",
+       "UKRAINE                   15\n",
+       "RUSSIAN                   15\n",
+       "UC                        14\n",
+       "UKR                       12\n",
+       "RUPOV                      9\n",
+       "RUS                        7\n",
+       "UNSURE                     6\n",
+       "UAPOV                      5\n",
+       "UKRAINIAN                  4\n",
+       "BEST                       4\n",
+       "A                          3\n",
+       "FROM                       2\n",
+       "THE                        2\n",
+       "CIVILIAN                   2\n",
+       "RUSSIA                     2\n",
+       "REDDIT                     2\n",
+       "MAP                        1\n",
+       "REBOOT                     1\n",
+       "ATTACKS                    1\n",
+       "EDUCATIONAL                1\n",
+       "TRANSPORTATION             1\n",
+       "DESTROYED                  1\n",
+       "KHARKIV,                   1\n",
+       "FOOTAGES                   1\n",
+       "CHINA                      1\n",
+       "MAIN                       1\n",
+       "UPDATE                     1\n",
+       "GEORGIANS                  1\n",
+       "UA.POV                     1\n",
+       "MOD                        1\n",
+       "UAPOV.                     1\n",
+       "ORDINARY                   1\n",
+       "UARUCIV                    1\n",
+       "RUUA                       1\n",
+       "WHAT                       1\n",
+       "UA.POV.                    1\n",
+       "RUKRAINERUSSIAREPORT       1\n",
        "Name: pov, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[\"pov\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ukraine_povs = [\"UKRAINE\", \"UC\", \"UKR\", \"UAPOV\", \"UKRAINIAN\", \"UA.POV\", \"UAPOV.\", \"UA.POV.\"]\n",
+    "russian_povs = [\"RUSSIAN\", \"RUPOV\", \"RUS\", \"RUSSIA\"]\n",
+    "\n",
+    "df.loc[ df[\"pov\"].isin(ukraine_povs), \"pov\"] = \"UA\"\n",
+    "df.loc[ df[\"pov\"].isin(russian_povs), \"pov\"] = \"RU\"\n",
+    "df.loc[ ~df[\"pov\"].isin([\"UA\", \"RU\"]), \"pov\"] = \"NONE\"\n",
+    "\n",
+    "df[\"pov\"].value_counts()\n",
+    "df.to_csv(\"parsed_data.csv\")"
    ]
   }
  ],
