--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,15 +163,26 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "313/313 [==============================] - 285s 900ms/step - loss: 0.7856 - accuracy: 0.5675 - val_loss: 0.6880 - val_accuracy: 0.6705\n",
+      "313/313 [==============================] - 264s 833ms/step - loss: 0.7996 - accuracy: 0.5602 - val_loss: 0.6700 - val_accuracy: 0.6533\n",
       "Epoch 2/10\n",
-      "313/313 [==============================] - 288s 919ms/step - loss: 0.6217 - accuracy: 0.7304 - val_loss: 0.6066 - val_accuracy: 0.7105\n",
+      "313/313 [==============================] - 257s 820ms/step - loss: 0.6415 - accuracy: 0.7164 - val_loss: 0.6056 - val_accuracy: 0.7005\n",
       "Epoch 3/10\n",
-      "313/313 [==============================] - 290s 928ms/step - loss: 0.4983 - accuracy: 0.8021 - val_loss: 0.6541 - val_accuracy: 0.7173\n",
+      "313/313 [==============================] - 265s 847ms/step - loss: 0.5235 - accuracy: 0.7920 - val_loss: 0.6471 - val_accuracy: 0.7077\n",
       "Epoch 4/10\n",
-      "313/313 [==============================] - 287s 917ms/step - loss: 0.4070 - accuracy: 0.8465 - val_loss: 0.6378 - val_accuracy: 0.7093\n",
+      "313/313 [==============================] - 264s 843ms/step - loss: 0.4223 - accuracy: 0.8368 - val_loss: 0.5935 - val_accuracy: 0.7149\n",
       "Epoch 5/10\n",
-      "  5/313 [..............................] - ETA: 4:28 - loss: 0.3653 - accuracy: 0.8750"
+      "313/313 [==============================] - 266s 851ms/step - loss: 0.3439 - accuracy: 0.8704 - val_loss: 0.7081 - val_accuracy: 0.7189\n",
+      "Epoch 6/10\n",
+      "313/313 [==============================] - 269s 860ms/step - loss: 0.2835 - accuracy: 0.8949 - val_loss: 0.7494 - val_accuracy: 0.7229\n",
+      "Epoch 7/10\n",
+      "313/313 [==============================] - 264s 844ms/step - loss: 0.2456 - accuracy: 0.9150 - val_loss: 0.7530 - val_accuracy: 0.7225\n",
+      "Epoch 8/10\n",
+      "313/313 [==============================] - 261s 832ms/step - loss: 0.2056 - accuracy: 0.9283 - val_loss: 0.8212 - val_accuracy: 0.7197\n",
+      "Epoch 9/10\n",
+      "313/313 [==============================] - 253s 810ms/step - loss: 0.1772 - accuracy: 0.9340 - val_loss: 1.0398 - val_accuracy: 0.7165\n",
+      "Epoch 9: early stopping\n",
+      "Training Accuracy: 0.9640\n",
+      "Testing Accuracy:  0.7165\n"
      ]
     }
    ],
