Added BERT code

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -29,7 +29,7 @@
     "DATA_FILE = \"parsed_data.csv\"\n",
     "df = pd.read_csv(\"parsed_data.csv\")\n",
     "titles = df[\"title\"].values.astype(str)\n",
-    "povs = df[\"pov\"].values\n"
+    "povs = df[\"pov\"].values"
    ]
   },
   {
